--- a/deploy_code/requirements.txt
+++ b/deploy_code/requirements.txt
@@ -1,16 +1,16 @@
 beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
-click==7.1.2)
-Flask==1.1.2)
+click==7.1.2
+Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-idna==2.10)
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pip==9.0.1)
+pip==9.0.1
 pkg-resources==0.0.0
 requests==2.25.1
 setuptools==44.0.0
