--- a/deploy_code/requirements.txt
+++ b/deploy_code/requirements.txt
@@ -6,11 +6,12 @@ Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+Frozen-Flask==0.15
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pip==9.0.1
+pip==21.0
 pkg-resources==0.0.0
 requests==2.25.1
 setuptools==44.0.0
