--- a/deploy_code/requirements.txt
+++ b/deploy_code/requirements.txt
@@ -1,23 +1,31 @@
-beautifulsoup4==4.9.3
-certifi==2020.12.5
+beautifulsoup4==4.10.0
+certifi==2021.5.30
 chardet==4.0.0
-click==7.1.2
-Flask==1.1.2
+charset-normalizer==2.0.6
+click==8.0.1
+Flask==2.0.1
 Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-Frozen-Flask==0.15
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-pip==21.0
-pkg-resources==0.0.0
-requests==2.25.1
-setuptools==44.0.0
-soupsieve==2.1
-SQLAlchemy==1.3.22
-urllib3==1.26.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+Frozen-Flask==0.18
+greenlet==1.1.1
+html5lib==1.1
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+numpy==1.21.2
+pandas==1.3.3
+pkg_resources==0.0.0
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+six==1.16.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.25
+urllib3==1.26.7
 Web-Scrapper==0.1
-Werkzeug==1.0.1
+webencodings==0.5.1
+Werkzeug==2.0.1
 WTForms==2.3.3
